--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ошибка</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body style="background-color: #121212; color: #ffffff;">
-<h1>Произошла ошибка</h1>
-<p th:text="${errorMessage}"></p>
-<a href="/users" class="btn btn-secondary">Вернуться к списку пользователей</a>
+<div class="container mt-5">
+    <h1>Произошла ошибка</h1>
+    <p th:text="${errorMessage}"></p>
+    <a href="/users" class="btn btn-secondary">Вернуться к списку пользователей</a>
+</div>
 </body>
 </html>
