--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список пользователей</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
-    <h1 class="mt-4">Список пользователей</h1>
+<div class="container mt-5">
+    <h1 class="mb-4">Список пользователей</h1>
     <table class="table table-striped">
         <thead>
         <tr>
