--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,14 +10,24 @@
 <div class="container mt-5">
     <h2>Вход в систему</h2>
     <form action="/login" method="post">
+        <!-- CSRF-токен для защиты от атак -->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
         <div class="mb-3">
-            <input type="text" name="username" placeholder="Логин" class="form-control" required>
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" id="email" name="username" class="form-control" required>
         </div>
+
         <div class="mb-3">
-            <input type="password" name="password" placeholder="Пароль" class="form-control" required>
+            <label for="password" class="form-label">Пароль:</label>
+            <input type="password" id="password" name="password" class="form-control" required>
         </div>
+
         <button type="submit" class="btn btn-primary">Войти</button>
     </form>
+
+
+    <!-- Ошибка входа -->
     <div th:if="${param.error}">
         <div class="alert alert-danger mt-2" role="alert">
             Неверные учетные данные. Пожалуйста, попробуйте еще раз.
