--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:insert="~{fragments/navbar :: navbar}"></div><!-- Подключение navbar -->
 <div class="container mt-5">
     <h1 class="mb-4">Создать пользователя</h1>
     <form th:action="@{/users/create}" th:object="${user}" method="post">
@@ -26,6 +27,21 @@
             <label for="email" class="form-label">Email:</label>
             <input type="email" id="email" th:field="*{email}" class="form-control" required/>
         </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Пароль:</label>
+            <input type="password" id="password" th:field="*{password}" class="form-control" required/>
+        </div>
+        <div class="mb-3">
+            <label for="role" class="form-label">Роль:</label>
+            <select id="role" th:field="*{roles}" class="form-select" required>
+                <option value="USER">Пользователь</option>
+                <option value="ADMIN">Администратор</option>
+                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
+            </select>
+            <div class="text-danger" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
+        </div>
+
+
         <button type="submit" class="btn btn-primary">Сохранить</button>
         <a class="btn btn-secondary" href="/users">Назад</a>
     </form>
