--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:insert="~{fragments/navbar :: navbar}"></div> <!-- Подключение navbar -->
 <div class="container mt-5">
     <h1 class="mb-4">Редактировать пользователя</h1>
     <form th:action="@{/users/edit}" method="post" th:object="${user}">
@@ -31,6 +32,21 @@
             <input type="email" class="form-control" id="email" th:field="*{email}" required/>
             <div class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
         </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Пароль (оставьте пустым, если не хотите изменять):</label>
+            <input type="password" id="password" th:field="*{password}" class="form-control"/>
+        </div>
+        <div class="mb-3">
+            <label for="role" class="form-label">Роль:</label>
+            <select id="role" th:field="*{roles}" class="form-select" required multiple>
+                <option th:each="role : ${roles}"
+                        th:value="${role.id}"
+                        th:text="${role.name}"
+                        th:selected="${user.roles.contains(role)}">
+                </option>
+            </select>
+        </div>
+
         <button type="submit" class="btn btn-primary">Сохранить</button>
         <a href="/users" class="btn btn-secondary">Отмена</a>
     </form>
