--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:insert="~{fragments/navbar :: navbar}"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Список пользователей</h1>
     <table class="table table-striped">
@@ -28,11 +29,13 @@
             <td th:text="${user.age}"></td>
             <td th:text="${user.email}"></td>
             <td>
-                <a class="btn btn-primary" th:href="@{/users/edit(id=${user.id})}">Редактировать</a>
-                <form th:action="@{/users/delete}" method="post" style="display:inline;">
-                    <input type="hidden" name="id" th:value="${user.id}" />
-                    <button class="btn btn-danger" type="submit">Удалить</button>
-                </form>
+                <div th:if="${isAdmin}">
+                    <a class="btn btn-primary" th:href="@{/users/edit(id=${user.id})}">Редактировать</a>
+                    <form th:action="@{/users/delete}" method="post" style="display:inline;">
+                        <input type="hidden" name="id" th:value="${user.id}" />
+                        <button class="btn btn-danger" type="submit">Удалить</button>
+                    </form>
+                </div>
             </td>
         </tr>
         </tbody>
