--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <h1>Произошла ошибка</h1>
     <p th:text="${errorMessage}"></p>
-    <a href="/users" class="btn btn-secondary">Вернуться к списку пользователей</a>
+    <a href="/admin" class="btn btn-secondary">Вернуться к списку пользователей</a>
 </div>
 </body>
 </html>
