--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:insert="~{fragments/navbar :: navbar}"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Редактировать пользователя</h1>
-    <form th:action="@{/users/edit}" method="post" th:object="${user}">
+    <form th:action="@{/admin/edit}" method="post" th:object="${user}">
         <input type="hidden" th:field="*{id}">
         <div class="mb-3">
             <label for="name" class="form-label">Имя:</label>
@@ -29,10 +30,19 @@
         <div class="mb-3">
             <label for="email" class="form-label">Email:</label>
             <input type="email" class="form-control" id="email" th:field="*{email}" required/>
-            <div class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+            <div class="text-danger" th:if="${emailError}" th:text=""></div>
         </div>
+
+        <div class="mb-3">
+            <label for="role" class="form-label">Роль:</label>
+            <select id="role" th:field="*{roles}" class="form-select" required>
+                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
+            </select>
+        </div>
+
         <button type="submit" class="btn btn-primary">Сохранить</button>
-        <a href="/users" class="btn btn-secondary">Отмена</a>
+        <a class="btn btn-secondary" th:href="@{/admin/users}">Назад</a>
+
     </form>
 </div>
 </body>
