--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -41,7 +41,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Сохранить</button>
-        <a class="btn btn-secondary" th:href="@{/admin/users}">Назад</a>
+        <a class="btn btn-secondary" th:href="@{/admin}">Назад</a>
 
     </form>
 </div>
