--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div th:insert="~{fragments/navbar :: navbar}"></div>
+<div class="d-flex">
+    <div th:insert="~{fragments/sidebar :: sidebar}" class="bg-light p-3" style="width: 250px; min-height: 100vh;"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Список пользователей</h1>
     <table class="table table-striped">
