--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -52,21 +52,60 @@
                             <td th:text="${user.email}"></td>
                             <td th:text="${user.isAdmin ? 'ADMIN' : 'USER'}"></td>
                             <td>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#edmodal" >Edit</button>
-
-                                <div class="modal fade" id="edmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <button class="btn btn-primary"
+                                        data-bs-toggle="modal"
+                                        th:data-bs-target="${'#editUserModal' + user.getId()}"
+                                        data-bs-dismiss="modal">Edit
+                                </button>
+                                <div class="modal fade" th:id="${'editUserModal' + user.id}" tabindex="-1" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Заголовок модального окна</h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                                <h5 class="modal-title">Edit User</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
+                                                <form th:method="post" th:action="@{/admin/edit}" th:object="${user}">
+                                                    <input type="hidden" name="id" th:value="${user.id}"/>
 
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                                                <button type="button" class="btn btn-primary">Сохранить изменения</button>
+                                                    <div class="mb-3">
+                                                        <label for="firstNameEdit" class="form-label">First Name</label>
+                                                        <input type="text" class="form-control" th:value="${user.name}" name="name" id="firstNameEdit"/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="lastNameEdit" class="form-label">Last Name</label>
+                                                        <input type="text" class="form-control" th:value="${user.surname}" name="surname" id="lastNameEdit"/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="ageEdit" class="form-label">Age</label>
+                                                        <input type="number" class="form-control" th:value="${user.age}" name="age" id="ageEdit"/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="emailEdit" class="form-label">Email</label>
+                                                        <input type="email" class="form-control" th:value="${user.email}" name="email" id="emailEdit"/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="passwordEdit" class="form-label">Password</label>
+                                                        <input type="password" class="form-control" name="password" id="passwordEdit"/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Role</label>
+                                                        <select multiple class="form-control form-control-sm mb-1"
+                                                                th:id="'roles_edit'+${user.getId()}"
+                                                                th:name="roles"
+                                                                size="2">
+                                                            <option th:each="role : ${roles}"
+                                                                    th:value="${role.id}"
+                                                                    th:text="${role.name}"
+                                                                    th:if="${role.name == 'ADMIN' || role.name == 'USER'}">
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                        <button type="submit" class="btn btn-primary">Save changes</button>
+                                                    </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
