--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -6,16 +6,20 @@
 </head>
 <body>
 <nav class="sidebar sidebar-light bg-light" th:fragment="sidebar">
-    <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+    <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical" th:if="${userRole == 'ADMIN'}">
         <!-- Кнопка "Admin" видна только пользователям с правами 'ADMIN' -->
         <a class="nav-link" href="/admin" sec:authorize="hasAuthority('ADMIN')"
            th:classappend="${requestURI.startsWith('/admin')} ? ' active'"
            role="tab" aria-controls="v-pills-home" aria-selected="true">Admin</a>
-
-        <!-- Кнопка "User" видна пользователям с правами 'ADMIN' или 'USER' -->
-        <a class="nav-link" href="/user" sec:authorize="hasAnyAuthority('ADMIN', 'USER')"
+        <a class="nav-link" href="/user" sec:authorize="hasAuthority('USER')"
            th:classappend="${requestURI == '/user'} ? ' active'"
            role="tab" aria-controls="v-pills-profile" aria-selected="false">User</a>
+    </div>
+
+    <div class="nav flex-column nav-pills pt-4" id="v-pills-tab2" role="tablist" aria-orientation="vertical" th:if="${userRole == 'USER'}">
+    <a class="nav-link" href="/user" sec:authorize="hasAuthority('USER')"
+       th:classappend="${requestURI == '/user'} ? ' active'"
+       role="tab" aria-controls="v-pills-profile" aria-selected="false">User</a>
     </div>
 </nav>
 </body>
