--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -52,11 +52,14 @@
                             <td th:text="${user.email}"></td>
                             <td th:text="${user.isAdmin ? 'ADMIN' : 'USER'}"></td>
                             <td>
+                                <!-- кнопка для эдита-->
                                 <button class="btn btn-primary"
                                         data-bs-toggle="modal"
                                         th:data-bs-target="${'#editUserModal' + user.getId()}"
                                         data-bs-dismiss="modal">Edit
                                 </button>
+
+                                <!-- модал для эдита-->
                                 <div class="modal fade" th:id="${'editUserModal' + user.id}" tabindex="-1" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
@@ -66,8 +69,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <form th:method="post" th:action="@{/admin/edit}" th:object="${user}">
-                                                    <input type="hidden" name="id" th:value="${user.id}"/>
-
+                                                    <div class="mb-3">
+                                                        <label for="idEdit" class="form-label">Id</label>
+                                                        <input type="number" class="form-control" th:value="${user.id}" name="name" id="idEdit" disabled/>
+                                                    </div>
                                                     <div class="mb-3">
                                                         <label for="firstNameEdit" class="form-label">First Name</label>
                                                         <input type="text" class="form-control" th:value="${user.name}" name="name" id="firstNameEdit"/>
@@ -112,10 +117,67 @@
                                 </div>
                             </td>
                             <td>
-                                <form th:action="@{/admin/delete}" method="post">
-                                    <input type="hidden" name="id" th:value="${user.id}" />
-                                    <button class="btn btn-danger" type="submit">Delete</button>
-                                </form>
+                                <!-- кнопка для делита-->
+                                <button class="btn btn-danger"
+                                        data-bs-toggle="modal"
+                                        th:data-bs-target="${'#deleteUserModal' + user.getId()}"
+                                        data-bs-dismiss="modal">Delete
+                                </button>
+
+                                <!-- модал для делита-->
+                                <div class="modal fade" th:id="${'deleteUserModal' + user.id}" tabindex="-1" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Delete User</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form th:method="post" th:action="@{/admin/delete}" th:object="${user}">
+                                                    <input type="hidden" name="id" th:value="${user.id}"/>
+                                                    <div class="mb-3">
+                                                        <label for="idDelete" class="form-label">Id</label>
+                                                        <input type="number" class="form-control" th:value="${user.id}" name="name" id="idDelete" disabled/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="firstNameDelete" class="form-label">First Name</label>
+                                                        <input type="text" class="form-control" th:value="${user.name}" name="name" id="firstNameDelete" disabled/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="lastNameDelete" class="form-label">Last Name</label>
+                                                        <input type="text" class="form-control" th:value="${user.surname}" name="surname" id="lastNameDelete" disabled/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="ageDelete" class="form-label">Age</label>
+                                                        <input type="number" class="form-control" th:value="${user.age}" name="age" id="ageDelete" disabled/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label for="emailDelete" class="form-label">Email</label>
+                                                        <input type="email" class="form-control" th:value="${user.email}" name="email" id="emailDelete" disabled/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Role</label>
+                                                        <select multiple class="form-control form-control-sm mb-1" th:id="'roles_edit'+${user.getId()}"
+                                                                th:name="roles" size="2" disabled>
+                                                            <option th:each="role : ${roles}"
+                                                                    th:value="${role.id}"
+                                                                    th:text="${role.name}"
+                                                                    th:if="${role.name == 'ADMIN' || role.name == 'USER'}">
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                        <form th:action="@{/admin/delete}" method="post">
+                                                            <input type="hidden" name="id" th:value="${user.id}" />
+                                                            <button class="btn btn-danger" type="submit">Delete</button>
+                                                        </form>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                         </tbody>
@@ -161,6 +223,8 @@
         </div>
     </div>
 </div>
+
+
 
 <!-- Подключаем скрипты Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
