--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -10,30 +10,31 @@
 <div th:insert="~{fragments/navbar :: navbar}"></div>
 <div class="d-flex">
     <div th:insert="~{fragments/sidebar :: sidebar}" class="bg-light p-3" style="width: 250px; min-height: 100vh;"></div>
-<div class="container mt-5">
-    <h1 class="mb-4">User information-page</h1>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Имя</th>
-            <th>Фамилия</th>
-            <th>Возраст</th>
-            <th>Email</th>
-            <th>Роль</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user : ${users}">
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.name}"></td>
-            <td th:text="${user.surname}"></td>
-            <td th:text="${user.age}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.isAdmin ? 'ADMIN' : 'USER'}"></td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="container mt-5">
+        <h1 class="mb-4">User information-page</h1>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Age</th>
+                <th>Email</th>
+                <th>Role</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user : ${users}">
+                <td th:text="${user.id}"></td>
+                <td th:text="${user.name}"></td>
+                <td th:text="${user.surname}"></td>
+                <td th:text="${user.age}"></td>
+                <td th:text="${user.email}"></td>
+                <td th:text="${user.isAdmin ? 'ADMIN' : 'USER'}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
