--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,7 +15,7 @@
                 <li class="nav-item">
                     <form action="/logout" method="post" class="nav-link">
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                        <button type="submit" style="background:none; border:none; color:inherit; cursor:pointer;">Выход</button>
+                        <button type="submit" style="background:none; border:none; color:inherit; cursor:pointer;">Logout</button>
                     </form>
                 </li>
             </ul>
